# try-github-actions

./: CMakeLists.txt  big-secret.txt
.github/workflows/: blank.yml
tests/: CMakeLists.txt  mathtest.cc
